--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
             <a href="javascript:;" class="focus btn bx_adfly_conversion_btn" data-clipboard-target="#copy">
               <span class="style4">LiNE：<b class="wxnum">7NRqvWYg71</b>(คลิกเพื่อ คัดลอก)</span></a><span class="style4">，สร้างรายได้ไปด้วยกัน！！！<br><br>
             </span>
-            <img src="./test_files/e1b7ef4559c330ccc6e493a9f8e293cd.jpg">
+            <img src="./test_files/e1b7ef4559c330ccc6e493a9f8e293cd.jpeg">
           </div>
           <p><b>
               <font size="4">1.โควิด-19 </font>
@@ -666,7 +666,7 @@
         <div class="item">
           <div class="zq">
             <div class="cover">
-              <img src="./test_files/ea80b1479ca177780ba0f4b6632bc122.jpg">
+              <img src="./test_files/ea80b1479ca177780ba0f4b6632bc122.jpeg">
             </div>
             <p class="style4">แฟนคลับคนแรกของฉันชื่อปลายฟ้า ซึ่งเป็นคนกรุงเทพฯ และเป็นพนักงานออฟฟิศ เงินเดือนของเธอแค่
               18,000+ เธอได้เรียนรู้วิธีการสร้างรายได้แบบใหม่ในการสร้างรายได้ วิธีการสร้างรายได้แบบใหม่นั้นง่ายมาก
@@ -682,7 +682,7 @@
           <div class="zq">
             <h3>รับสมัครตัวแทน 100 ท่าน</h3>
             <div class="cover">
-              <img src="./test_files/b186f95deeeac63e998164e326f77e26.jpg">
+              <img src="./test_files/b186f95deeeac63e998164e326f77e26.jpeg">
             </div>
             <p class="style3">เพียงแค่คุณมีเวลาหรือมีลูกทีมก็คุณสามารถร่วมสมัครเป็นตัวแทนได้! ขณะนี้รับสมัครเพียง
               100ท่านเท่านั้น ทางเราจะจัดโปรเจคที่มีคุณภาพที่ดีที่สุด </p>
@@ -695,9 +695,9 @@
 								<img src="./test_files/1b2fd8dd99f89cc1aedcc13cb4b7f597.png" class="style7 "></a>
           </div>
           <br>
-          <img src="./test_files/073d04fbcb9d9740a1f2d44263b36784.jpg">
-          <img src="./test_files/a0b7e83df7fe640a3d8f8768bc1a2002.jpg">
-          <img src="./test_files/b3.jpg">
+          <img src="./test_files/073d04fbcb9d9740a1f2d44263b36784.jpeg">
+          <img src="./test_files/a0b7e83df7fe640a3d8f8768bc1a2002.jpeg">
+          <img src="./test_files/b3.jpeg">
         </div>
 
 
